vlib/v/checker/tests/return_missing_match_simple.vv
fn h() int {
	a := 1
	match a {
		else { println('abc') }
	}
	println('hello')
}

fn main() {
	d := h()
	println('h returned: $d')
}
